Fix margin gap on package details card when there is info loaded and add animation

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,7 @@ body
     background-color: #a598ee;
     margin-top: 15%;
     margin-bottom: 30px;
+    transition: margin-top 300ms ease-in-out;
 }
 
 .card-alert-icon
